agregando-un-parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<body>
 		<h1>Work Flow</h1>
 		<p>Es el flujo de trabajo que se da todo en todo proyecto de un grupo de desarrolladores o en algun proyecto individual.</p>
+		<p>Se trabaja usando branches.</p>
 	</body>
 </html>
